fixing more layout issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,9 @@ body {
 	color:#666;
 }
 
+
 .search-block {
+	width:511px;
 	margin:0 auto;
 }
 
@@ -44,14 +46,18 @@ input.search {
 	border-radius:4px;
 	padding:8px;
 	border:1px solid #888;
-	margin-left:100px;
 } 
 
 button {
 	background-color:#666;
-	padding:10px;
+	padding:8px 15px;
 	color:#fff;
-
+	font-size:18px;
+	border:none;
+	border-radius:5px;
 }
 
-
+button:hover {
+	background-color:#888;
+	color:#fff;
+=}
